[add F/f] components/,components/DisplayOption [edit i18n] DipslayOptions

--- a/i18n/english.json
+++ b/i18n/english.json
@@ -3,5 +3,10 @@
     "greeting": "Welcome to Book Nest",
     "description": "これは日本語のページです。",
     "about":"このページにたどり着いたということは、まだあなたは本を登録していませんね。"
+  },
+  "DisplayOptions":{
+    "All":"ALL",
+    "Author":"By Author",
+    "Series":"By Series"
   }
 }
