#1 [fix] ウォッチャーの実装改善,リアクティブ変数の型安全性とメンテナンス性の向上,プロップスのバリデーション強化 [add F/f] 設定の分離と定数の使用

--- a/i18n/english.json
+++ b/i18n/english.json
@@ -10,17 +10,17 @@
     "Searchlabel": "Search",
     "ReadStatus": {
       "All": "All",
-      "Read": "Read",
+      "Completed": "Completed",
       "Reading": "Reading",
       "Unread": "Unread"
     },
     "BookType": {
       "All": "All",
-      "GeneralBooks": "General Books",
+      "General": "General",
       "Manga": "Manga",
       "LightNovel": "Light Novel",
       "Other": "Other"
     },
-    "SearchPlaceholder": "Search by title, author, series"
+    "SearchPlaceHolder": "Search by title, author, series"
   }
 }
