#1 [edit i18n] json内でのkeyの命名規則の修正 [fix app.vue] 状態管理の実装 [fix config/bookTypeFilter] 型の安全性

--- a/i18n/english.json
+++ b/i18n/english.json
@@ -5,9 +5,9 @@
     "Series": "By Series"
   },
   "BookFilter": {
-    "ReadStatuslabel": "Read Status",
-    "BookTypelabel": "Book Type",
-    "Searchlabel": "Search",
+    "readStatusLabel": "Read Status",
+    "bookTypeLabel": "Book Type",
+    "searchLabel": "Search",
     "ReadStatus": {
       "All": "All",
       "Completed": "Completed",
@@ -21,6 +21,6 @@
       "LightNovel": "Light Novel",
       "Other": "Other"
     },
-    "SearchPlaceHolder": "Search by title, author, series"
+    "searchPlaceHolder": "Search by title, author, series"
   }
 }
